Fixed image overlap on index page

--- a/css/index.css
+++ b/css/index.css
@@ -156,3 +156,10 @@ body {
 #sf-menu {
     padding-bottom: 3em;
 }
+
+img.drvcs {
+    position: fixed;
+    left: 2em;
+    bottom: 0em;
+    z-index: -1;
+}
